# VibeLens

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  featured-skills.json  pyproject.toml  vibelens.example.yaml
.github/workflows/: ci.yml  publish.yml  update-featured-skills.yml
config/: demo-memory.yaml  demo-sqlite.yaml  demo.yaml  self-use.yaml  test.yaml  vibelens.example.yaml
datasets/: metadata.json
docs/: ANALYSIS_DESIGN.md  CLAUDE_LOCAL_STRUCTURE.md  PRODUCT_SPEC.md  TECHNICAL_DESIGN.md  blurb.md  mongodb-target-spec.md  release.md  spec-upload-donation.md
docs/codex/: CODEX_LOCAL_STRUCTURE.md  codex-architecture.md  codex-config-system.md  codex-memory-skill-system.md  codex-sandbox-system.md  codex-tools-system.md  codex-vs-claude-code.md
docs/gemini-cli/: GEMINI_LOCAL_STRUCTURE.md  gemini-agent-skill-system.md  gemini-architecture.md  gemini-config-system.md  gemini-hook-extension-system.md  gemini-model-routing.md  gemini-sandbox-security.md  gemini-tools-system.md  gemini-vs-claude-code.md
docs/roadmap/: roadmap_v1.md
examples/: claude-code-example.jsonl  codex-example.jsonl  gemini-example.json
examples/claude-codex-example/: 64da7265-8f07-4967-b79f-0ae374c13330.jsonl  6d590f7e-b18e-438f-939f-421c18d3620f.jsonl  9e14d594-5f63-4b19-ba8b-624bd0c9869b.jsonl
examples/codex-example/: rollout-2026-03-14T12-21-29-019ced27-1efa-78f0-936a-69a9afac75fa.jsonl
examples/gemini-cli-example/: session-2026-03-14T16-40-97253fa9.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: app.tsx  index.css  main.tsx  settings-context.tsx  styles.ts  types.ts  utils.ts
scripts/: pull_hf.py
src/vibelens/: __init__.py  app.py  cli.py  db.py  deps.py
tests/: conftest.py  test_config.py  test_context_extraction.py  test_cost_estimator.py  test_db.py  test_e2e.py  test_friction_cost.py  test_friction_digest_tiers.py  test_friction_live.py  test_friction_prompt.py  test_ingest_claude_code.py  test_ingest_dataclaw.py  test_models.py  test_session_batcher.py  test_sources_huggingface.py  test_sources_mongodb.py  test_targets_mongodb.py  test_timestamps.py
tests/analysis/: test_dashboard_service.py  test_flow_endpoint.py  test_pricing.py
tests/api/: test_e2e.py  test_session_routes.py
tests/config/: test_config.py  test_settings.py
tests/dashboard/: test_dashboard.py  test_pricing.py
tests/donation/: test_sender.py
tests/friction/: test_friction_cli.py  test_friction_cost.py  test_friction_digest_tiers.py  test_friction_live.py  test_friction_prompt.py
tests/ingest/: test_base.py  test_claude_code.py  test_codex.py  test_correlator.py  test_dataclaw.py  test_diagnostics.py  test_examples.py  test_fingerprint.py  test_gemini.py  test_parallel.py  test_phase_detector.py  test_tool_graph.py  test_tool_normalizers.py  test_vibelens_parser.py
tests/live/: conftest.py  (+3 more)
(+551 files in other folders)
